--- a/README
+++ b/README
@@ -74,10 +74,10 @@ The SVF commands 'FREQUENCY', 'PIO' and 'PIOMAP' are unsupported. Any
 use of this commands in an SVF input file is reported as error.
 
 The SVF 'RUNTEST' command is implemented in a limited manner: The
-'MAXIMUM' time parameter is ignored. Combining 'TCK' or 'SCK' with
-a time parameter results in first executing the specified number of
-clock pulses followed by a delay of the specified timespan, instead
-of performing the clock cycles and the delay in parallel.
+'MAXIMUM' time parameter is ignored. Combining 'SCK' with a time
+parameter results in first executing the specified number of clock
+pulses followed by a delay of the specified timespan, instead of
+performing the clock cycles and the delay in parallel.
 
 The SVF commands 'HDR', 'HIR', 'SDR', 'SIR', 'TDR' and 'TIR' support
 an additional non-standard 'RMASK' parameter. This is a mask for the
@@ -122,10 +122,18 @@ be set to implementations of the following functions:
 	interface. No other libxsvf_host callback function will
 	be called after this function has been executed.
 
-  void udelay(struct libxsvf_host *h, long usecs);
+  void udelay(struct libxsvf_host *h, long usecs, int tms, long num_tck)
 
-	A function that delay execution for at least the specified
+	A function that delays execution for at least the specified
 	number of microseconds.
+
+	When the 'num_tck' argument is not 0 also the specified number tck
+	clock cycles (i.e. 1-0-1 transitions) must be generated with TMS set
+	to the value specified in the 'tms' argument.
+
+	A simple implementation may perform the delay and the clock cycles
+	after another instead of parallel. This only has an impact on the
+	runtime of the player, not on its functionality.
 
   int getbyte(struct libxsvf_host *h);
 
@@ -156,6 +164,21 @@ be set to implementations of the following functions:
 	
 	The function must return the current value of the tdo line, or -1 on
 	a TDO-mismatch-error.
+
+	A simple implementation of this function would look like this:
+
+	--snip--
+	int my_pulse_tck(struct libxsvf_host *h, int tms, int tdi, int tdo, int rmask) {
+		int line_tdo;
+		setPort(TMS, tms);
+		if (tdi >= 0)
+			setPort(TDI, tdi);
+		setPort(TCK, 0);
+		setPort(TCK, 1);
+		line_tdo = getPort(TDO);
+		return tdo < 0 || line_tdo == tdo ? line_tdo : -1;
+	}
+	--snap--
 
   void pulse_sck(struct libxsvf_host *h);
 
