--- a/README
+++ b/README
@@ -117,11 +117,14 @@ be set to implementations of the following functions:
 	jtag interface. It is executed before any other libxsvf_host
 	callback function is called.
 
-  void shutdown(struct libxsvf_host *h);
+  int shutdown(struct libxsvf_host *h);
 
 	This function is called by libxsvf to shutdown the jtag
 	interface. No other libxsvf_host callback function will
 	be called after this function has been executed.
+
+	This function should return 0 when shutting down the jtag
+	interface went find and -1 on an error.
 
   void udelay(struct libxsvf_host *h, long usecs, int tms, long num_tck)
 
@@ -141,7 +144,15 @@ be set to implementations of the following functions:
 	A function that returns the next byte from the input file
 	or -1 on end of file.
 
-  void pulse_tck(struct libxsvf_host *h, int tms, int tdi, int tdo, int rmask)
+  int sync(struct libxsvf_host *h);
+
+	This function is only needed when writing bindings for an asynchronous
+	hardware interface (see 'Using libxsvf with asynchronous interfaces' below).
+
+	This function is optional and the function pointer may be set to a NULL
+	pointer on implementations using the simple synchronous interface.
+
+  void pulse_tck(struct libxsvf_host *h, int tms, int tdi, int tdo, int rmask, int sync)
 
 	This is the main JTAG I/O callback function.
 	It must perform the following tasks:
@@ -169,7 +180,7 @@ be set to implementations of the following functions:
 	A simple implementation of this function would look like this:
 
 	--snip--
-	int my_pulse_tck(struct libxsvf_host *h, int tms, int tdi, int tdo, int rmask) {
+	int my_pulse_tck(struct libxsvf_host *h, int tms, int tdi, int tdo, int rmask, int sync) {
 		int line_tdo;
 		setPort(TMS, tms);
 		if (tdi >= 0)
@@ -180,6 +191,10 @@ be set to implementations of the following functions:
 		return tdo < 0 || line_tdo == tdo ? line_tdo : -1;
 	}
 	--snap--
+
+	The 'sync' argument can safely be ignored unless you are writing
+	bindings for an asynchronous hardware interface (see 'Using libxsvf
+	with asynchronous interfaces' below).
 
   void pulse_sck(struct libxsvf_host *h);
 
@@ -207,7 +222,7 @@ be set to implementations of the following functions:
   int set_frequency(struct libxsvf_host *h, int v);
 
 	A function to set the JTAG CLK frequency to the specified
-	value in Hz. This functions should return 0 when setting
+	value in Hz. This function should return 0 when setting
 	the frequency was successful and -1 on error. 
 
 	This function pointer is optional (may be set to NULL).
@@ -291,6 +306,36 @@ environments libxsvf also provides 'host accessor macros' in the
 libxsvf.h header file. Simply remove the callback functions from
 the libxsvf_host struct and modify the LIBXSVF_HOST_ macros
 to fit your needs.
+
+
+Using libxsvf with asynchronous interfaces
+------------------------------------------
+
+This library has been designed at first for a register mapped bit banging
+interface as it can be found on many microcontrollers or host CPUs. But
+some interfaces might require the JTAG data to be send and recivied in
+blocks and/or asynchronously. This is not trivial with this library because the
+pulse_tck() callback function is expected to transfer one single bit at a time.
+The solution to this is to buffer all data sent to pulse_tck() and always
+return a valid status (i.e. 'tdo < 0 ? 1 : tdo') and do the transfers when the
+buffer is full or when an interface shutdown is requested.
+
+However, some JTAG transaction must be performed synchronously (e.g. the last
+transaction in an XSVF XREPEAT data shift. In this cases pulse_tck() is called
+with the 'sync' argument set to 1. The pulse_tck() function must then perform
+all buffered JTAG transactions and return the actual tdo value for this last
+JTAG transaction.
+
+An asynchronous interface binding also must implement the sync() function. It
+must perform all buffered JTAG transactions and return -1 if a TDO error was
+detected an 0 otherwise.
+
+Note: The returncode of pulse_tck is not checked in all conditions! So whenever
+an error is detected all further calls to pulse_tck() up to and including
+the next call of pulse_tck() with the 'sync' argument set or the next call to
+sync() or shutdown() must return -1.
+
+Have a look at the example program 'jtag-ft2232h.c' for a reference implementation.
 
 
 Stripping down libxsvf
