--- a/xsvftool-xpcu.src/README
+++ b/xsvftool-xpcu.src/README
@@ -65,14 +65,47 @@ prefer to create a udev rule that does set the permissions automatically:
 	ACTION=="add", SUBSYSTEM=="usb", ATTR{idVendor}=="04b4", ATTR{idProduct}=="8613", MODE:="0666"
 
 
+Restore Xilinx CPLD Firmware with "xsvftool-xpcu"
+-------------------------------------------------
+
+The Xilinx ISE comes with XSVF files for programming the CPLD with the Xilinx
+firmware. You can simply use "xsvftool-xpcu" to program the CPLD to the original
+firmware:
+
+	$ ./xsvftool-xpcu -P -x /data/software/Xilinx13.1/ISE_DS/ISE/data/xusb_emb.fmwr
+
+After that you need to disconnect and reconnect the probe before you can load
+the Xilinx FX2 firmware and use the probe with impact:
+
+	$ lsusb -d 04b4:8613
+	Bus 001 Device 106: ID 04b4:8613 Cypress Semiconductor Corp. CY7C68013 EZ-USB FX2 USB 2.0 Development Kit
+
+	$ sudo fxload -t fx2 -D /dev/bus/usb/001/106 -I /data/software/Xilinx13.1/ISE_DS/ISE/bin/lin/xusb_emb.hex
+
+	### usually you need to wait a few seconds here for the device to re-enumerate and settle ###
+	$ lsusb -d 03fd:0008
+	Bus 001 Device 108: ID 03fd:0008 Xilinx, Inc. 
+
+	### just scan the jtag chain to test the probe ###
+	$ sudo /data/software/Xilinx13.1/ISE_DS/ISE/bin/lin/impact -batch /dev/null
+	> setMode -bs
+	> setCable -port usb21
+	> identify
+	> quit
+
+NOTE: Use the *.hex file from the "ISE/bin/lin/" directory! It is different
+from the one in the "ISE/data/" directory and only this one seams to work.
+
+
 Restore Xilinx CPLD Firmware with "impact"
 ------------------------------------------
 
 Up to ISE 11 the Xilinx "impact" program did automatically reprogram the CPLD on
 the probe whenever needed. Since ISE 12 this does only work when there is already
 an (older) Xilinx firmware on the probe. So in order to reprogram the CPLD on
-the probe you need ISE 11 installed. Then it is prossible to reprogram the CPLD
-just by loading the fx2 firmware and running impact on the probe:
+the probe with "impact" you need ISE 11 installed. Then it is prossible to
+reprogram the CPLD just by loading the fx2 firmware and running impact on the
+probe:
 
 	$ lsusb -d 04b4:8613
 	Bus 002 Device 021: ID 04b4:8613 Cypress Semiconductor Corp.  CY7C68013 EZ-USB FX2 USB 2.0 Development Kit
@@ -83,19 +116,18 @@ just by loading the fx2 firmware and running impact on the probe:
 	$ lsusb -d 03fd:0008
 	Bus 002 Device 022: ID 03fd:0008 Xilinx, Inc. 
 
-	$ sudo chmod 666 /dev/bus/usb/002/022
-
 	$ vi impatch_batch.cmd
 	setMode -bs
 	setCable -port usb21
 	quit
 
-	$ /opt/Xilinx/11.3/ISE/bin/lin/impact -batch impatch_batch.cmd
+	### this automatically reprograms the CPLD without doing anything else with the probe ###
+	$ sudo /opt/Xilinx/11.3/ISE/bin/lin/impact -batch impatch_batch.cmd
 
 The "reset-probe.sh" shell script in this directory (libxsvf/xsvftool-xpcu.src/)
 does this automatically:
 
-	$ sudo bash reset-probe.sh
+	$ sudo bash reset-probe-impact.sh
 
 WARNING: For some reason this procedure fails when the probe has been used with
 xsvftool-xpcu between beeing connected to USB and loading xusb_emb.hex into the
