--- a/xsvftool-xpcu.src/README
+++ b/xsvftool-xpcu.src/README
@@ -1,6 +1,6 @@
 
-xsvftool-xpcu - An (X)SVF player for the Xilinx Platform Cable USB
-==================================================================
+xsvftool-xpcu - An (X)SVF player for the Xilinx Platform Cable USB II
+=====================================================================
 
 This program can be used to play SVF and XSVF files on the "Xilinx
 Platform Cable USB" family of JTAG probes.
@@ -9,7 +9,7 @@ It is based on the libxsvf library:
 http://www.clifford.at/libxsvf/
 
 This tool replaces the original CPLD firmware from Xilinx when run
-on one of the probes. See the notes below on how to restore the xilinx
+on one of the probes. See the notes below on how to restore the Xilinx
 firmware on the CPLD.
 
 The file 'firmware.c' also contains a brief description of the pin mappings
@@ -18,33 +18,42 @@ on the probe as used by this software, as well as a brief description of
 the USB protocol this software is using.
 
 With this software it is possible to use JTAG clock speeds up to 24 MHz.
-But with the high frequencies there are "gaps" in the transmittion resulting
+But with the high frequencies there are "gaps" in the transmission resulting
 in an effective transfer rate of approx 6 MBit/s.
 
 This tool contains firmware for the CY7C68013A-100AIX (firmware.c) and for the
 XC2C256-7VQ100 (hardware.v) on the probe. Some more exotic tools are needed to
 build these. So pre-compiled versions of this firmware images are distributed
-along with the xsvftool-xpcu sourcecode. You need to set the USE_PREP_* config
+along with the xsvftool-xpcu source code. You need to set the USE_PREP_* config
 options in the Makefile to '0' if you prefer building the firmware yourself.
 
 
-Hardware Tested
----------------
+Supported and Unsupported hardware
+----------------------------------
 
-Currently the only hardware that has been tested is a self-built clone of
-the Xilinx probe, based on the schematics of a Xilinx development board.
+This software has been tested using the following probes:
 
-It is possible that other probes need small modifications of the code in
-order to work properly.
+	- A Xilinx Platform Cable USB
+	- The on-board probe of a Spartan-6 development board
+	- A self-built clone of the Xilinx Platform Cable USB
 
-I plan to make some tests with other hardware soon...
+Per default the software recognizes the following USB vendor IDs and device IDs
+(VID:PID) as a supported probe:
+
+	03fd:0009	Xilinx Platform Cable USB
+	03fd:000d	Xilinx Platform Cable USB (embedded)
+	03fd:000f	Xilinx Platform Cable USB (low power)
+	04b4:8613	Cypress FX2 without configuration PROM
+
+Currently there is no support for the "Xilinx Platform Cable USB II" in this
+software. I don't have access to such a probe at the moment.
 
 
 Notes on device permissions
 ---------------------------
 
 To run xsvftool-xpcu as unprivileged user you need to set the permissions on
-the usb device accordingly. E.g.:
+the USB device accordingly. E.g.:
 
 	$ lsusb -d 04b4:8613
 	Bus 002 Device 021: ID 04b4:8613 Cypress Semiconductor Corp.  CY7C68013 EZ-USB FX2 USB 2.0 Development Kit
@@ -62,7 +71,15 @@ prefer to create a udev rule that does set the permissions automatically:
 
 	$ vi /etc/udev/rules.d/xsvftool-xpcu.rules
 	# Allow everyone access to the Xilinx Platform Cable USB (see 'man 7 udev' for details)
+	ACTION=="add", SUBSYSTEM=="usb", ATTR{idVendor}=="03fd", ATTR{idProduct}=="0008", MODE:="0666"
+	ACTION=="add", SUBSYSTEM=="usb", ATTR{idVendor}=="03fd", ATTR{idProduct}=="0009", MODE:="0666"
+	ACTION=="add", SUBSYSTEM=="usb", ATTR{idVendor}=="03fd", ATTR{idProduct}=="000d", MODE:="0666"
+	ACTION=="add", SUBSYSTEM=="usb", ATTR{idVendor}=="03fd", ATTR{idProduct}=="000f", MODE:="0666"
 	ACTION=="add", SUBSYSTEM=="usb", ATTR{idVendor}=="04b4", ATTR{idProduct}=="8613", MODE:="0666"
+
+NOTE: The line for 03fd:0008 is for the re-enumerated device when the original
+Xilinx firmware is used on the probe. It is not used nor needed when using
+xsvftool-xpcu exclusively, but isn't harmful either.
 
 
 Restore Xilinx CPLD Firmware with "xsvftool-xpcu"
@@ -80,13 +97,13 @@ the Xilinx FX2 firmware and use the probe with impact:
 	$ lsusb -d 04b4:8613
 	Bus 001 Device 106: ID 04b4:8613 Cypress Semiconductor Corp. CY7C68013 EZ-USB FX2 USB 2.0 Development Kit
 
-	$ sudo fxload -t fx2 -D /dev/bus/usb/001/106 -I /data/software/Xilinx13.1/ISE_DS/ISE/bin/lin/xusb_emb.hex
+	$ fxload -t fx2 -D /dev/bus/usb/001/106 -I /data/software/Xilinx13.1/ISE_DS/ISE/bin/lin/xusb_emb.hex
 
 	### usually you need to wait a few seconds here for the device to re-enumerate and settle ###
 	$ lsusb -d 03fd:0008
 	Bus 001 Device 108: ID 03fd:0008 Xilinx, Inc. 
 
-	### just scan the jtag chain to test the probe ###
+	### just scan the JTAG chain to test the probe ###
 	$ sudo /data/software/Xilinx13.1/ISE_DS/ISE/bin/lin/impact -batch /dev/null
 	> setMode -bs
 	> setCable -port usb21
@@ -103,14 +120,14 @@ Restore Xilinx CPLD Firmware with "impact"
 Up to ISE 11 the Xilinx "impact" program did automatically reprogram the CPLD on
 the probe whenever needed. Since ISE 12 this does only work when there is already
 an (older) Xilinx firmware on the probe. So in order to reprogram the CPLD on
-the probe with "impact" you need ISE 11 installed. Then it is prossible to
+the probe with "impact" you need ISE 11 installed. Then it is possible to
 reprogram the CPLD just by loading the fx2 firmware and running impact on the
 probe:
 
 	$ lsusb -d 04b4:8613
 	Bus 002 Device 021: ID 04b4:8613 Cypress Semiconductor Corp.  CY7C68013 EZ-USB FX2 USB 2.0 Development Kit
 
-	$ sudo fxload -t fx2 -D /dev/bus/usb/002/021 -I /opt/Xilinx/11.3/ISE/bin/lin/xusb_emb.hex
+	$ fxload -t fx2 -D /dev/bus/usb/002/021 -I /opt/Xilinx/11.3/ISE/bin/lin/xusb_emb.hex
 
 	### usually you need to wait a few seconds here for the device to re-enumerate and settle ###
 	$ lsusb -d 03fd:0008
@@ -122,15 +139,15 @@ probe:
 	quit
 
 	### this automatically reprograms the CPLD without doing anything else with the probe ###
-	$ sudo /opt/Xilinx/11.3/ISE/bin/lin/impact -batch impatch_batch.cmd
+	$ /opt/Xilinx/11.3/ISE/bin/lin/impact -batch impatch_batch.cmd
 
 The "reset-probe.sh" shell script in this directory (libxsvf/xsvftool-xpcu.src/)
 does this automatically:
 
-	$ sudo bash reset-probe-impact.sh
+	$ bash reset-probe-impact.sh
 
 WARNING: For some reason this procedure fails when the probe has been used with
-xsvftool-xpcu between beeing connected to USB and loading xusb_emb.hex into the
+xsvftool-xpcu between being connected to USB and loading xusb_emb.hex into the
 FX2. So disconnect and reconnect the probe before running the reset-probe.sh
 script!
 
