Clifford Wolf: 	Documentation hotfix
git-svn-id: http://svn.clifford.at/libxsvf/trunk@57 26ca6efd-f666-0410-bd9f-983cc4be47ed

--- a/xsvftool-xpcu.src/README
+++ b/xsvftool-xpcu.src/README
@@ -1,6 +1,6 @@
 
-xsvftool-xpcu - An (X)SVF player for the Xilinx Platform Cable USB II
-=====================================================================
+xsvftool-xpcu - An (X)SVF player for the Xilinx Platform Cable USB
+==================================================================
 
 This program can be used to play SVF and XSVF files on the "Xilinx
 Platform Cable USB" family of JTAG probes.
